Fix WAR file path

--- a/ElectricShopManagement/Dockerfile
+++ b/ElectricShopManagement/Dockerfile
@@ -1,5 +1,5 @@
 FROM tomcat:9.0
 
-COPY target/ElectricShopManagement.war /usr/local/tomcat/webapps/
+COPY ElectricShopManagement.war /usr/local/tomcat/webapps/
 
 EXPOSE 8080
